# alpaka.problem

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
src/: gpt.py  main.py
src/static/: font.css  script.js  style.css
src/templates/: index.html  test.html
static/: all.min.js  script.js  style.css
templates/: index.html  test.html
ui/: index.html  style.css
